--- a/BWT.html
+++ b/BWT.html
@@ -16,13 +16,12 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:180px;height:150px;position: relative; right: 75px;" alt="" /></a>
-					<h1><strong>Hi, I am Matthew Cann</strong>
-						<br />Graduate Student | MASc University of Waterloo <br /></a></h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -34,8 +33,11 @@
 						</header>
 						<p>
 							<img class="w3-image"><img src="images/uofw.png", style = "width:350px;height:100px;position: relative; left: -40px; bottom: 40px;padding-bottom: 10px;" alt="" /><br>
+							<b style = "color: black; font-weight: 900; "> 2019-Present</b>
+							<br>
+							
 							Advisors: <a href="https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/fslien">Fue Sang Lien</a> & <a href = "https://uwaterloo.ca/mechanical-mechatronics-engineering/profile/wmelek">William Melek</a><br>
-							Bladeless wind turbines are a new concept of wind harvesting machines that use vortex-induced vibrations (VIV) to oscillate a vertical cylinder. Vortex shedding is a phenomenon that occurs when fluid passes around a bluff body, such as a cylinder. Vortex shedding produces unbalanced forces acting on the structure which causes the oscillation. The only VIV machine used as a wind turbine is from a Spanish start-up, Vortex Bladeless. The company has no products on the market and are only focusing on single turbines. This project will build on the previous work of hydrokinetic VIV machines to build a cluster of wind power machines to exploit the wind resource of urban environments and supply urban areas with renewable energy.
+							<br>Bladeless wind turbines are a new concept of wind harvesting machines that use vortex-induced vibrations (VIV) to oscillate a vertical cylinder. Vortex shedding is a phenomenon that occurs when fluid passes around a bluff body, such as a cylinder. Vortex shedding produces unbalanced forces acting on the structure which causes the oscillation. The only VIV machine used as a wind turbine is from a Spanish start-up, Vortex Bladeless. The company has no products on the market and are only focusing on single turbines. This project will build on the previous work of hydrokinetic VIV machines to build a cluster of wind power machines to exploit the wind resource of urban environments and supply urban areas with renewable energy.
 							The objective of this project is to provide a solution to generate clean and sustainable energy in highly populated urban areas using a cluster of innovative bladeless wind turbines. 
 							<br><br>
 							<br><img  class="w3-image" border-radius=100%; src="images/CBWT.png" alt="" style="width:650px;height:400px;"></img>
