--- a/Feature_red.html
+++ b/Feature_red.html
@@ -16,13 +16,12 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:180px;height:150px;position: relative; right: 75px;" alt="" /></a>
-					<h1><strong>Hi, I am Matthew Cann</strong>
-						<br />Graduate Student | MASc University of Waterloo <br /></a></h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -32,6 +31,8 @@
 						<header class="major">
 							<h2>Feature Reduction using PCA, LDA, AND PCA+LDA to Improve Decision Tree C4.5 Classification of Human
 								Activity Recognition Dataset</h2> 
+								<b style = "color: black; font-weight: 900; "> 2020</b><br><br>
+
 
 						</header>
 
@@ -77,7 +78,6 @@
 							
 							<br>
 							<a href = "Feature Reduction using PCA, LDA, AND PCA+LDA to Improve Decision Tree C4.5 Classification of Human.pdf">Full report can be found here.</a><br>
-							<br>2019 <br>
 							<br><br>
 
 							<a href="index.html" class="button">Back</a>
