--- a/Germany_research.html
+++ b/Germany_research.html
@@ -16,13 +16,12 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:180px;height:150px;position: relative; right: 75px;" alt="" /></a>
-					<h1><strong>Hi, I am Matthew Cann</strong>
-						<br />Graduate Student | MASc University of Waterloo <br /></a></h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -34,14 +33,16 @@
 						</header>
 						<p>
 							<img class="w3-image"><img src="images/Germ_logo.png", style = "width:30%;position: relative; left: -0px; bottom: 40px;padding-bottom: 10px;" alt="" /><br>
-							
+							<b style = "color: black; font-weight: 900; "> 2018</b><br>
+
 							<header><h3>Objective<h3></header>
+								<p>
 								Build a model of an outdoor pool that will simulate the applicable heat transfers and provide the behaviour of the pool 
 								<br>Main objective discretized into three outcomes:<br>
 								&emsp;&emsp;• Simulate the applicable heat transfer mechanisms<br>
 								&emsp;&emsp;• Simulate pool water temperature variation during a 24 hour period<br>
-								&emsp;&emsp;• Compare basin water height by analytical and numerical methods<br>
-								<br><br>
+								&emsp;&emsp;• Compare basin water height by analytical and numerical methods<br></p>
+								<br>
 								<header><h3>Method</h3></Header>
 									
 								The analytical behaviour of the outdoor swimming pool was modelled using a Matlab/Simulkin program. The heat balance equation is solved for the temperature of the pool using a few assumptions for simplification. The pool temperature is assumed uniform through the depth due to satisfactory mixing provided by the occupants and inflow and outflow of water. Furthermore, the volume of the pool is assumed to remain constant, i.e., the water evaporated from the pool is supplied from the inlet from the basin. 
