--- a/Urban_wind.html
+++ b/Urban_wind.html
@@ -16,13 +16,12 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:180px;height:150px;position: relative; right: 75px;" alt="" /></a>
-					<h1><strong>Hi, I am Matthew Cann</strong>
-						<br />Graduate Student | MASc University of Waterloo <br /></a></h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -31,6 +30,7 @@
 					<section id="one">
 						<header class="major">
 							<h2>Implementation of Urban Wind Farms in Winnipeg, MB, Canada</h2> 
+							<b style = "color: black; font-weight: 900; "> 2019</b><br><br>
 
 						</header>
 
@@ -89,7 +89,6 @@
 							
 							<br>
 							<a href = "Implementation of Urban Wind Farms in Winnipeg MB Canada.pdf">Full report can be found here.</a><br>
-							<br>2017 <br>
 							<br><br>
 
 							<a href="index.html" class="button">Back</a>
