--- a/PR.html
+++ b/PR.html
@@ -16,13 +16,12 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:180px;height:150px;position: relative; right: 75px;" alt="" /></a>
-					<h1><strong>Hi, I am Matthew Cann</strong>
-						<br />Graduate Student | MASc University of Waterloo <br /></a></h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -31,7 +30,8 @@
 					<section id="one">
 						<header class="major">
 							<h2>Director of Professional Relations</h2> 
-							<img class="image fit" src="images/phil.png", style = "width:10%;position: relative; left: 0px; bottom: 40px;padding-bottom: 10px;" alt="" />
+							<img class="image fit" src="images/phil.png", style = "width:10%;position: relative; left: 0px; bottom: 0px;padding-bottom: 00px;" alt="" />
+							<b style = "color: black; font-weight: 900; "> 2016 - 2018</b><br><br>
 
 						</header>
 
@@ -52,8 +52,6 @@
 							<br><b style = "color: black; font-weight: 900; ">Presented by:</b><br>
 
 							<img class="image fit" src="images/spons.png", style = "width:60%;position: relative; left: 0px; bottom: 40px;padding-bottom: 10px;" alt="" />
-
-							<br>2016 - 2018 <br>
 
 
 							<br>
