--- a/Undergrad_thesis.html
+++ b/Undergrad_thesis.html
@@ -14,15 +14,13 @@
 
 	</head>
 	<body class="is-preload">
-
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:180px;height:150px;position: relative; right: 75px;" alt="" /></a>
-					<h1><strong>Hi, I am Matthew Cann</strong>
-						<br />Graduate Student | MASc University of Waterloo <br /></a></h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -31,9 +29,12 @@
 					<section id="one">
 						<header class="major">
 							<h2>Undergraduate Thesis</h2>
+
 						</header>
 						<p>
-							<img class="w3-image"><img src="images/uofm.jpg", style = "width:30%;position: relative; left: -20px; bottom: 40px;padding-bottom: 10px;" alt="" /><br>
+							<img class="w3-image"><img src="images/uofm.jpg", style = "width:30%;position: relative; left: -20px; bottom: 20px;padding-bottom: 00px;" alt="" /><br>
+							<b style = "color: black; font-weight: 900; "> 2018-2019</b><br><br>
+
 							The global push for energy conservation and energy-efficient systems has fueled the interest in heat
 							exchanger research. Furthermore, the effect of the quality of the grid and mesh generation software on
 							the accuracy, convergence, and computational resource has not been demonstrated in the literature.
