--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<img class="image fit "border-radius=100%; src="images/phil.png" alt="" style="width:75%;" /></img>
 							<h3>Director of Professional Relations</h3>
 							<p>University of Manitoba Engineering Society. </p>
-							<br><a href="PR.html" class="button">Learn more</a>
+							<br><a href="PR_v2.html" class="button">Learn more</a>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
 							<img  class="image fit "><img src="images/UMSATS_Patch.png" alt="" style="width:50%;margin-top: -40px;"/></img>
