--- a/UMSATS_exec.html
+++ b/UMSATS_exec.html
@@ -16,12 +16,12 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-		<header id="header">
-			<div class="inner">
-				<a href="#" class="image avatar"><img src="images/headshot.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
-				<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
-					<br />I'm a graduate student in <b style = "color: white; font-weight: 500; ">Mechanical Engineering  </b> at the University of Waterloo with a special interest in the intersection of <b style = "color:white; font-weight: 500; ">Fluid Dynamics  </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
-		</header>
+			<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/headshot2.jpg", style = "width:120%;position: relative; right: 30px;" alt="" /></a>
+					<h1><strong style = "font-size: 200%;font-weight: bold;color:whitesmoke">Matthew Cann</strong>
+						<br />A software developer with an interest in the intersection of <b style = "color:white; font-weight: 500; ">Renewable Energy </b> and <b style = "color:white; font-weight: 500; ">Machine Learning</b>. <br /></a></h1>				</div>
+			</header>
 
 		<!-- Main -->
 			<div id="main">
